--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = ["Iulia Maria Vacar <iulia_mv@yahoo.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = "^2.28.1"
+plotly = "^5.9.0"
+pandas = "^1.4.3"
+kaleido = "0.2.1"
 
 [tool.poetry.dev-dependencies]
 
